[package]
name = "arrow_a_row_trainer"
version = "0.1.0"
edition = "2021"

[lib]
name = "xinput1_3"
crate-type = ["cdylib","rlib"]

[dependencies]
hudhook = { version = "0.7.0", default-features = false, features = ["dx11"] }
vcheat = "0.6.5"

# [dependencies.windows]
# version = "0.56.0"
# features = [
#     "Win32_Foundation",
#     "Win32_UI_WindowsAndMessaging",
#     "Win32_UI_Shell",
# ]

[build-dependencies]
forward-dll = "0.1.11"
